--- a/mybook.html
+++ b/mybook.html
@@ -15,7 +15,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>
 
-    <script src="mybook.js"></script>
+    <script src="mybookId.js"></script>
+    <script src="userService.js"></script>
     <style>
         .well {
             margin-bottom: 0px;
@@ -33,6 +34,7 @@
         <div class="col-sm-3 well" style="height: 900px;">
             <ul>
                 <li><a href="#!contact">Phone Book</a></li>
+                <li><a href="#!users">User List</a></li>
             </ul>
         </div>
         <div class="col-sm-9 well" style="height: 900px;">
