--- a/contact.html
+++ b/contact.html
@@ -1,24 +1,29 @@
 <div>
-    <form ng-submit="doAdd()">
+    <div class="pull-left">
         Name: <input type="text" ng-model="name" /><br><br>
         Phone Number: <input type="text" ng-model="phoneNumber" /><br><br>
-        <button>Add</button>
-    </form>
-    <br><br>
+        <button ng-click="doAdd()" ng-show="isEdit == false">Add</button>
+        <button ng-click="doUpdate()" ng-show="isEdit == true">Update</button>
+    </div>
+    <hr>
+    <div class="pull-right" style="width: 300px;">
+        <input type="text" placeholder="Search by Name" ng-model="search.name" />
+    </div>
+    
 
-    <table class="table" ng-if="book.length > 0">
+    <table class="table" ng-if="books.length > 0">
         <thead>
             <th>Name</th>
             <th>Phone Number</th>
             <th>Action</th>
         </thead>
         <tbody>
-            <tr ng-repeat="contact in book">
+            <tr ng-repeat="contact in books  | filter: search track by $index">
                 <td>{{contact.name}}</td>
                 <td>{{contact.phoneNumber}}</td>
                 <td>
-                    <button ng-click="doEdit(contact)">Edit</button> |
-                    <button ng-click="doDelete(contact)">Delete</button>
+                    <button ng-click="doEdit(contact.id)">Edit</button> |
+                    <button ng-click="doDelete(contact.id)">Delete</button>
                 </td>
             </tr>
         </tbody>
